--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1235,6 +1235,14 @@ $gold: #dba514;
 @media only screen and (max-width: 1200px) {
   // header
   .inputs{
+    height: 45px !important;
+    margin: 0;
+    padding: 7px 16px !important;
+    font-size: 16px !important;
+    line-height: 29px;
+    font-weight: 500;
+    caret-color: #ffd400;
+    margin-bottom: 15px !important;
 width: 100% !important;
   }
   .header {
@@ -3894,6 +3902,7 @@ width: 100% !important;
           text-align: center;
           line-height: 16px;
           color: #665f5f;
+          display: none;
         }
       }
     }
@@ -3924,6 +3933,7 @@ width: 100% !important;
         }
         p {
           font-size: 10px;
+          display: none;
           text-align: center;
           line-height: 16px;
           color: #665f5f;
@@ -4236,14 +4246,14 @@ width: 100% !important;
       flex-grow: 1;
       flex-shrink: 1;
       align-self: stretch;
-      height: 83px;
+      height: 50px;
       margin: 0;
-      padding: 27px 46px;
-      font-size: 29px;
-      line-height: 29px;
+      padding: 7px 16px;
+      font-size: 18px;
+      line-height: 19px;
       font-weight: 500;
       caret-color: #ffd400;
-      margin-bottom: 53px;
+      margin-bottom: 20px;
       background: rgba(217, 217, 217, 0.5);
       border: 2px solid #000000;
       border-radius: 10px;
@@ -4315,7 +4325,7 @@ display: none;
       line-height: 34px;
       transform: rotate(180deg) !important;
       margin: 134px 45px 43px 45px;
-      color: #ffffff;
+      color: #000000;
     }
   }
 }
@@ -4369,7 +4379,7 @@ display: none;
   display: flex;
   gap: 30px;
   justify-content: center;
-  max-width: 80%;
+  max-width: 38%;
   margin: 100px auto;
   width: 100%;
 }
@@ -4450,6 +4460,10 @@ display: none;
   width: 100%;
 }
 @media only screen and (max-width: 1550px) {
+  .career_row{
+    max-width: 49%;
+    width: 49%;
+  }
   .hire {
     display: flex;
     flex-direction: column;
@@ -4540,14 +4554,14 @@ display: none;
       flex-grow: 1;
       flex-shrink: 1;
       align-self: stretch;
-      height: 60px !important;
+      height: 50px ;
       margin: 0;
-      padding: 7px 16px !important;
-      font-size: 18px !important;
-      line-height: 29px;
+      padding: 7px 16px ;
+      font-size: 18px ;
+      line-height: 19px;
       font-weight: 500;
       caret-color: #ffd400;
-      margin-bottom: 30px !important;
+      margin-bottom: 20px ;
       background: rgba(217, 217, 217, 0.5);
       border: 2px solid #000000;
       border-radius: 10px;
@@ -4618,7 +4632,7 @@ display: none;
         line-height: 26px;
         transform: rotate(180deg) !important;
         margin: 59px 3px 50px 7px;
-        color: #ffffff;
+        color: #000000;
       }
     }
   }
@@ -7128,4 +7142,13 @@ position: relative;
         }
       }
     }
+    .career{
+      .career_row{
+        margin: 10px;
+      }
+      .cayh{
+      font-size: 18px !important;
+    }
+    }
+    
   }
