--- a/styles/overrides.css
+++ b/styles/overrides.css
@@ -5,7 +5,7 @@
     padding: 0 !important;
   }
   .carousel .slide {
-    height: 290px !important;
+    /* height: 290px !important; */
   }
 }
 @media only screen and (max-width: 850px) {
@@ -15,7 +15,7 @@
     padding: 0 !important;
   }
   .carousel .slide {
-    height: 390px !important;
+    /* height: 390px !important; */
   }
 }
 .carousel-status{
