--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -5343,6 +5343,7 @@ display: none;
          background-color: #000000;
          color: white;
          border-radius: 50px;
+         cursor: pointer;
        }
       }
    
