--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -821,7 +821,7 @@
     padding-bottom: 30px;
   }
   .wrw .wrwp {
-    font-size: 22px;
+    font-size: 19px;
     line-height: 32px;
     width: 100%;
   }
@@ -877,14 +877,14 @@
     padding: 0px 0px 20px 0px;
   }
   .testimonials h2 {
-    font-size: 42px;
+    font-size: 32px;
     font-weight: 600;
     line-height: 42px;
     padding-bottom: 25px;
   }
   .testimonials .review {
-    font-size: 28px;
-    line-height: 48px;
+    font-size: 22px;
+    line-height: 40px;
     padding-bottom: 40px;
     width: 70%;
   }
@@ -893,7 +893,7 @@
     height: 2px;
   }
   .testimonials .cname {
-    font-size: 36px;
+    font-size: 32px;
     line-height: 34.76px;
     font-weight: 700;
     padding-bottom: 20px;
@@ -1052,10 +1052,10 @@
     height: 82px;
   }
   .footer .b1 p {
-    font-size: 21px;
-    line-height: 38px;
-    width: 82%;
     margin: 0px 0px 0px 0px;
+    font-size: 18px;
+    line-height: 29px;
+    width: 90%;
   }
   .footer .b2 {
     display: flex;
@@ -1075,8 +1075,8 @@
   }
   .footer .b2 p {
     margin: 0px 32px 0px 30px;
-    font-size: 21px;
-    line-height: 38px;
+    font-size: 18px;
+    line-height: 29px;
   }
   .footer .b3 {
     display: flex;
@@ -1104,7 +1104,7 @@
   }
   .footer .address {
     width: 235px;
-    margin: 0px 42px 0px 48px !important;
+    margin: 0px 0px 0px 56px !important;
   }
   .footer .email {
     margin: 0px 0px 0px 28px !important;
@@ -1242,7 +1242,7 @@
     padding-bottom: 20px;
   }
   .wrw .wrwp {
-    font-size: 18px;
+    font-size: 16px;
     padding: 0px 0px 50px 0px;
     line-height: 34px;
   }
@@ -1303,19 +1303,19 @@
     padding: 55px 0px 0px 0px;
   }
   .testimonials h3 {
-    font-size: 24px;
+    font-size: 21px;
     line-height: 30.01px;
     padding: 0px 0px 20px 0px;
   }
   .testimonials h2 {
-    font-size: 32px;
+    font-size: 26px;
     font-weight: 600;
     line-height: 28px;
     padding-bottom: 25px;
   }
   .testimonials .review {
-    font-size: 21px;
-    line-height: 38px;
+    font-size: 18px;
+    line-height: 28px;
     padding-bottom: 25px;
     width: 73%;
   }
@@ -1324,7 +1324,7 @@
     height: 2px;
   }
   .testimonials .cname {
-    font-size: 28px;
+    font-size: 24px;
     line-height: 28.76px;
     font-weight: 700;
     padding-bottom: 15px;
@@ -1445,7 +1445,7 @@
   .footer .b2 {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     margin: 55px 0px 0px 0px;
     width: 70%;
@@ -1475,6 +1475,27 @@
   }
   .footer .email {
     margin: 0px 0px 0px 28px !important;
+  }
+  .b3 {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    margin: 55px 0px 0px 0px;
+    width: 70%;
+    border-left: 1px solid #000000;
+  }
+  .b3 h3 {
+    color: #ffd400;
+    padding: 0px 0px 15px 0px;
+    font-weight: 600;
+    line-height: 15px !important;
+    font-size: 18px !important;
+  }
+  .b3 p {
+    margin: 0px 32px 0px 30px;
+    font-size: 21px;
+    line-height: 38px;
   }
   .footer_row {
     display: flex;
@@ -5038,7 +5059,7 @@
 @media only screen and (max-width: 550px) {
   .randoxc {
     width: 100%;
-    height: 660px;
+    height: 440px;
     margin: 100px 0px 50px 0px;
     top: 0;
     right: 0;
@@ -5085,9 +5106,9 @@
   }
   .rightr {
     width: 100%;
-    max-width: 410px;
+    max-width: 380px;
     height: 100%;
-    max-height: 430px;
+    max-height: 380px;
     z-index: -1;
     position: relative;
     justify-content: space-between;
