--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -77,6 +77,9 @@
   width: 36%;
   color: #ffffff;
 }
+.banner .bl .hired {
+  display: none;
+}
 .banner .bl .mv {
   display: none;
 }
@@ -1997,6 +2000,20 @@
     width: 100%;
     color: #ffffff;
   }
+  .banner .bl .hired {
+    display: block;
+    padding: 10px 30px;
+    background-color: #ffd400;
+    color: black;
+    font-family: "Montserrat";
+    font-style: normal;
+    font-weight: 600;
+    margin-top: 20px;
+    border: none;
+    border-radius: 132px;
+    font-size: 12px;
+    line-height: 15px;
+  }
   .banner .bl .dv {
     display: none;
   }
@@ -3381,6 +3398,7 @@
   .contact .contact_us {
     position: relative;
     top: 23px;
+    margin: 0px 10px 0px 0px;
     width: 200px;
     left: 0;
   }
@@ -3403,9 +3421,9 @@
   }
   .contact_cell {
     right: 0px;
-    top: 105px;
-    height: 213px !important;
-    width: 167px !important;
+    top: 160px;
+    height: 151px !important;
+    width: 118px !important;
   }
   .form .form_desc {
     margin-top: 30px;
@@ -3423,7 +3441,7 @@
   }
   .form .row {
     display: flex;
-    width: 117px !important;
+    width: 170px !important;
     gap: 0px;
     flex-direction: column;
   }
@@ -3469,7 +3487,7 @@
     padding: 14px 31px 10px 50px !important;
   }
   .form .message {
-    width: 117px !important;
+    width: 170px !important;
     height: 94px !important;
     word-wrap: break-word;
     word-break: break-all;
@@ -6986,6 +7004,82 @@
   }
   .career .career_row {
     margin: 10px;
+    max-width: 90%;
+    width: 90%;
+  }
+  .career .career_row .c_card {
+    display: flex;
+    background-color: #ffd400;
+    border-radius: 55px;
+    flex-direction: column;
+    border-radius: 90px;
+    justify-content: flex-end;
+    position: relative;
+    align-items: center;
+  }
+  .career .career_row .c_card .tab {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    z-index: 111;
+  }
+  .career .career_row .c_card .tab .arrow {
+    margin: 0px 17px 20px 17px;
+    width: 45px;
+    color: white;
+    height: 45px;
+    font-size: 45px;
+  }
+  .career .career_row .c_card .tab .vertical {
+    -ms-writing-mode: tb-lr;
+        writing-mode: vertical-lr;
+    font-family: Montserrat;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 34px;
+    transform: rotate(180deg) !important;
+    margin: 29px 13px 35px 14px;
+    color: #000000;
+  }
+  .career .career_row .cd_card {
+    display: flex;
+    background-color: #ffd400;
+    border-radius: 55px;
+    height: 350px;
+    width: 300px;
+    flex-direction: row-reverse;
+    border-radius: 38px;
+    justify-content: center;
+    transition-delay: 1ms;
+    position: relative;
+    transition: ease-out;
+    align-items: flex-end;
+  }
+  .career .career_row .cd_card .tab2 {
+    justify-content: space-around;
+    align-items: center;
+    display: flex;
+    position: relative;
+    z-index: 1111;
+    flex-direction: row-reverse;
+    background: white;
+    width: 90%;
+    border-radius: 66px;
+    color: #000000;
+    padding: 10px;
+    margin: 20px;
+  }
+  .career .career_row .cd_card .arrow2 {
+    width: 45px;
+    color: black !important;
+    height: 45px;
+    font-size: 45px;
+  }
+  .career .career_row .cd_card .horizontal {
+    font-family: Montserrat;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 34px;
   }
   .career .cayh {
     font-size: 18px !important;
